--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -1,101 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/new_post"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/new_post_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/new_post_icon"
-        android:contentDescription="@string/post_image" />
-
-    <LinearLayout
-        android:id="@+id/new_post_info"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/new_post_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:id="@+id/post_new_project_title"
-            style="@style/AppTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:gravity="center_horizontal|top"
-            android:text="@string/post_new_project_title"
-            android:textAppearance="@style/log_in_text"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/post_new_description_description"
-            style="@style/AppTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:gravity="center_horizontal|top"
-            android:text="@string/post_new_project_text"
-            android:textAppearance="@style/sign_in_description"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <include
-        android:id="@+id/project_name_group"
-        layout="@layout/custom_input_field_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_post_info" />
-
-    <include
-        android:id="@+id/project_deadline_group"
-        layout="@layout/custom_input_field_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/project_name_group" />
-
-    <include
-        android:id="@+id/project_description_group"
-        layout="@layout/custom_input_field_email"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/project_deadline_group" />
-
-    <Button
-        android:id="@+id/post_button"
-        style="@style/AppTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40sp"
-        android:layout_weight="1"
-        android:src="@drawable/log_in_btn"
-        android:gravity="center"
-        android:text="@string/post"
-        android:textAppearance="@style/log_in_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/project_description_group" />
-
+    android:layout_height="match_parent"
+    android:padding="16dp">
     <TextView
         android:id="@+id/email_group_post"
         android:layout_width="wrap_content"
@@ -118,5 +28,105 @@
         app:layout_constraintStart_toEndOf="@+id/new_post_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/new_post_image"
+        android:layout_width="182dp"
+        android:layout_height="168dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/new_post_icon"
+        app:layout_constraintBottom_toTopOf="@+id/new_post_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/new_post_title"
+        style="@style/AppTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|top"
+        android:text="@string/post_new_project_title"
+        android:textAppearance="@style/log_in_text"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/new_post_image" />
+
+    <TextView
+        android:id="@+id/new_post_description"
+        style="@style/AppTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|top"
+        android:text="@string/post_new_project_text"
+        android:textAppearance="@style/sign_in_description"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/new_post_title" />
+
+    <include
+        android:id="@+id/project_name_group"
+        layout="@layout/custom_input_field_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/new_post_description" />
+
+    <include
+        android:id="@+id/project_description_group"
+        layout="@layout/custom_input_field_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/project_name_group" />
+
+    <include
+        android:id="@+id/project_deadline_group"
+        layout="@layout/custom_input_field_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/project_description_group" />
+
+    <include
+        android:id="@+id/project_availability_group"
+        layout="@layout/custom_input_field_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/project_deadline_group" />
+
+    <Button
+        android:id="@+id/post_button"
+        style="@style/AppTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="80dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/log_in_btn"
+        android:gravity="center"
+        android:text="@string/post"
+        android:textAppearance="@style/log_in_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/project_availability_group" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
